Animations! (press enter)

--- a/style.css
+++ b/style.css
@@ -29,14 +29,12 @@ html {
 
 body {
   position: fixed;
-  top: 0;
-  left: 0;
+  top: 0; left: 0;
   margin: 0px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 99.7%;
-  height: 99.7%;
+  width: 99.7%; height: 99.7%;
 
   background-color: var(--c-base);
   color: var(--c-text);
@@ -48,25 +46,21 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  width: 70%;
-  height: 80%;
+  width: 70%; height: 80%;
 }
 
 .top-bar {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
-  height: 50px;
+  width: 100%; height: 50px;
 }
 
 .verbum-title {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
-  width: 150px;
+  height: 50px; width: 150px;
 
   color: var(--c-text);
   font-weight: 600;
@@ -78,11 +72,9 @@ body {
 .description {
   display: flex;
   align-items: center;
-  height: 20px;
-  width: 70%;
+  height: 20px; width: 70%;
 
   padding-top: 3px;
-
   font-size: 12px;
 }
 
@@ -91,8 +83,7 @@ body {
   align-items: center;
   justify-content: space-between;
 
-  height: 50px;
-  width: 150px;
+  height: 50px; width: 150px;
 }
 
 .test-progress {
@@ -162,15 +153,13 @@ body {
 
 .stage-lists {
   position: absolute;
-  top: 11%;
-  left: 2%;
+  top: 11%; left: 2%;
 
   display: flex;
   align-items: center;
   justify-content: space-between;
 
-  height: 88%;
-  width: 10%;
+  height: 88%; width: 10%;
 }
 
 .stage-list {
@@ -179,17 +168,14 @@ body {
   align-items: center;
   justify-content: space-between;
 
-  width: 47%;
-  height: 100%;
+  width: 47%; height: 100%;
 }
 
 .stage-button {
   display: flex;
   align-items: center;
   justify-content: center;
-
-  height: 4%;
-  width: 100%;
+  height: 4%; width: 100%;
 
   font-size: 10px;
   background-color: var(--c-surface);
@@ -206,94 +192,77 @@ body {
 .words {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 
   margin-top: 2.5%;
-  height: 85%;
-  width: 70%;
+  height: 100%; width: 70%;
 }
 
-.p-word, .n-word {
+.word {
   position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  height: 25%;
-  width: 80%;
   padding-left: 20px;
+  margin-bottom: 20px;
+  transition: all 0.5s, margin-bottom 0.75s;
 }
 
-.c-word {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+.full-information {
+  padding-left: 2px;
+  color: var(--c-subtext);
+  transition: inherit;
+}
 
-  height: 40%;
-  width: 100%;
-  padding-left: 20px;
+.prompt {
+  color: var(--c-text);
+  transition: inherit;
+}
+
+.part-of-speech {
+  margin-left: 5px;
+  color: var(--c-dim);
+  transition: inherit;
+}
+
+.translation {
+  color: var(--c-subtext);
+  transition: inherit;
+}
+
+.word-gone {height: 0px; width: 0px; margin-bottom: 0px;}
+.word-gone .full-information {font-size: 0px;}
+.word-gone .prompt {font-size: 0px;}
+.word-gone .part-of-speech {font-size: 0px;}
+.word-gone .translation {font-size: 0px;}
+
+.word-small {height: 25%; width: 80%;}
+.word-small .full-information {font-size: 16px;}
+.word-small .prompt {font-size: 25px;}
+.word-small .part-of-speech {font-size: 20px;}
+.word-small .translation {font-size: 25px;}
+
+.word-big {height: 40%; width: 100%;}
+.word-big .full-information {font-size: 20px;}
+.word-big .prompt {margin-top: -5px; font-size: 45px;}
+.word-big .part-of-speech {margin-top: -5px; font-size: 40px;}
+.word-big .translation {margin-top: -7px; font-size: 45px;}
+
+.dont-animate {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
 }
 
 .side-bar {
   position: absolute;
-  top: 0;
-  left: 0;
-
-  height: 100%;
-  width: 5px;
-
+  top: 0; left: 0;
+  height: 100%; width: 5px;
   background-color: var(--c-surface);
 }
 
 .prompt-container {
   display: flex;
   align-items: center;
-}
-
-.p-word .prompt, .n-word .prompt {
-  color: var(--c-text);
-  font-size: 25px;
-}
-
-.p-word .part-of-speech, .n-word .part-of-speech {
-  margin-left: 5px;
-  color: var(--c-dim);
-  font-size: 20px;
-}
-
-.p-word .translation, .n-word .translation {
-  color: var(--c-subtext);
-  font-size: 25px;
-}
-
-.p-word .full-information, .n-word .full-information {
-  padding-left: 2px;
-  color: var(--c-subtext);
-  font-size: 16px;
-}
-
-.c-word .prompt {
-  margin-top: -5px;
-  color: var(--c-text);
-  font-size: 45px;
-}
-
-.c-word .part-of-speech {
-  margin-top: -5px;
-  margin-left: 5px;
-  color: var(--c-dim);
-  font-size: 40px;
-}
-
-.c-word .translation {
-  margin-top: -7px;
-  color: var(--c-subtext);
-  font-size: 45px;
-}
-
-.c-word .full-information {
-  padding-left: 2px;
-  color: var(--c-subtext);
-  font-size: 20px;
+  transition: inherit;
 }
