--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* * {border: 1px solid red;} */
-.vertical {position: fixed; top: 0; left: 50%; width: 0px; height: 99.7%;}
-.horizontal {position: fixed; top: 50%; left: 0; width: 99.7%; height: 0px;}
-
 :root {
   --cycle-progress-percentage: 100;
   --test-progress-percentage: 100;
@@ -207,7 +203,7 @@ body {
   transition: all 0.5s, margin-bottom 0.75s;
 }
 
-.full-information {
+.full-name {
   padding-left: 2px;
   color: var(--c-subtext);
   transition: inherit;
@@ -236,19 +232,19 @@ input {
 }
 
 .word-gone {height: 0px; width: 0px; margin-bottom: 0px;}
-.word-gone .full-information {font-size: 0px;}
+.word-gone .full-name {font-size: 0px;}
 .word-gone .prompt {font-size: 0px;}
 .word-gone .part-of-speech {font-size: 0px;}
 .word-gone .translation {font-size: 0px;}
 
 .word-small {height: 25%; width: 80%;}
-.word-small .full-information {font-size: 12px;}
+.word-small .full-name {font-size: 12px;}
 .word-small .prompt {font-size: 25px;}
 .word-small .part-of-speech {font-size: 20px;}
 .word-small .translation {font-size: 25px;}
 
 .word-big {height: 40%; width: 100%;}
-.word-big .full-information {font-size: 20px;}
+.word-big .full-name {font-size: 20px;}
 .word-big .prompt {margin-top: -5px; font-size: 45px;}
 .word-big .part-of-speech {margin-top: -5px; font-size: 40px;}
 .word-big .translation {margin-top: -5px; font-size: 45px;}
