--- a/style.css
+++ b/style.css
@@ -268,3 +268,21 @@ input {
   align-items: center;
   transition: inherit;
 }
+
+.shake-animation {
+  animation: shake 0.25s;
+}
+
+@keyframes shake {
+  0% { transform: translate(1px, 0px) rotate(0deg); }
+  10% { transform: translate(-1px, 0px) rotate(0deg); }
+  20% { transform: translate(-3px, 0px) rotate(0deg); }
+  30% { transform: translate(1px, 0px) rotate(0deg); }
+  40% { transform: translate(1px, 0px) rotate(0deg); }
+  50% { transform: translate(-3px, 0px) rotate(0deg); }
+  60% { transform: translate(-1px, 0px) rotate(0deg); }
+  70% { transform: translate(2px, 0px) rotate(0deg); }
+  80% { transform: translate(-3px, 0px) rotate(0deg); }
+  90% { transform: translate(1px, 0px) rotate(0deg); }
+  100% { transform: translate(3px, 0px) rotate(0deg); }
+}
