--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 70%; height: 80%;
+  width: 1080px; height: 620px;
 }
 
 .top-bar {
