--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 /* * {border: 1px solid red;} */
 
+.screen-toggle {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
 :root {
   --cycle-progress-percentage: 100;
   --test-progress-percentage: 100;
@@ -42,6 +48,20 @@ body {
 .main {
   position: relative;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1080px; height: 620px;
+}
+
+.test {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 1080px; height: 620px;
+}
+
+.home {
+  display: none;
   flex-direction: column;
   align-items: center;
   width: 1080px; height: 620px;
@@ -242,29 +262,6 @@ body {
 .settings-input-toggle:checked:before {
   left: 22px;
 }
-
-.settings-save {
-  margin-top: 20px;
-  height: 20px;
-  width: 40px;
-  padding: 5px;
-
-  background-color: var(--c-highlight);
-  border-radius: 5px;
-
-  color: var(--c-crust);
-  transition: all 0.2s;
-}
-
-.settings-save:hover {
-  cursor: pointer;
-  background-color: #e48c99;
-}
-
-.settings-save:active {
-  background-color: var(--c-lowlight)
-}
-
 
 .stage-lists {
   position: absolute;
