--- a/style.css
+++ b/style.css
@@ -81,10 +81,13 @@ body {
   align-items: center;
   justify-content: space-between;
 
-  height: 50px; width: 200px;
+  height: 50px; width: 220px;
 }
 
 .timer {
+  text-align: center;
+  width: 60px;
+
   font-size: 20px;
   color: var(--c-subtext);
 }
