--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 3;
 
   height: 50px;
   width: 50px;
@@ -187,6 +188,7 @@ body {
 
 .settings {
   display: none;
+  z-index: 2;
 
   position: absolute;
   top: 60px;
@@ -290,12 +292,11 @@ body {
 
 .start {
   position: absolute;
-  top: 45px;
+  top: 70px;
   left: 150px;
   display: flex;
   flex-direction: column;
 
-  margin-top: 2.5%;
   height: 540px; width: 775px;
 }
 
@@ -367,12 +368,11 @@ body {
 
 .words {
   position: absolute;
-  top: 45px;
+  top: 70px;
   left: 150px;
   display: flex;
   flex-direction: column;
 
-  margin-top: 2.5%;
   height: 550px; width: 775px;
 }
 
@@ -450,6 +450,147 @@ input {
   display: flex;
   align-items: center;
   transition: inherit;
+}
+
+.end {
+  position: absolute;
+  top: 70px;
+  left: 150px;
+  display: flex;
+  flex-direction: column;
+
+  height: 540px; width: 775px;
+}
+
+.result-bar {
+  position: relative;
+  margin-top: 10px;
+  width: 500px;
+  height: 20px;
+  border-radius: 5px;
+
+  background-color: var(--c-red);
+}
+
+.result-bar-inner {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 20px;
+  width: 400px;
+  border-radius: 5px;
+
+  background-color: var(--c-green);
+}
+
+.word-results {
+  margin-top: 10px;
+  padding: 20px;
+  width: 600px;
+  height: 350px;
+
+  background-color: #191927;
+  border-radius: 5px;
+  overflow-y: scroll;
+}
+
+.word-result {
+  width: 100%;
+  height: 35px;
+  margin-bottom: 5px;
+}
+
+.word-result-word {
+  margin-right: 7px;
+}
+
+.word-result-translation {
+  margin-right: 7px;
+  color: var(--c-subtext);
+}
+
+.word-result-stats {
+  color: var(--c-highlight);
+}
+
+.word-result-bar {
+  position: relative;
+  margin-top: 5px;
+  width: 580px;
+  height: 5px;
+  border-radius: 5px;
+
+  background-color: var(--c-red);
+}
+
+.word-result-bar-inner {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  height: 5px;
+  width: 400px;
+  border-radius: 5px;
+
+  background-color: var(--c-green);
+}
+
+.home-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  margin-top: 20px;
+
+  background-color: var(--c-highlight);
+  color: var(--c-mantle);
+  user-select: none;
+}
+
+.home-button:hover {
+  cursor: pointer;
+}
+
+.again-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-top: 20px;
+
+  background-color: var(--c-lowlight);
+  color: var(--c-mantle);
+  user-select: none;
+}
+
+.again-button:hover {
+  cursor: pointer;
+}
+
+.tiwa-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  margin-left: 10px;
+  margin-top: 20px;
+
+  background-color: #a7adc6;
+  color: var(--c-mantle);
+  user-select: none;
+}
+
+.tiwa-button:hover {
+  cursor: pointer;
 }
 
 .shake-animation {
