--- a/style.css
+++ b/style.css
@@ -203,7 +203,7 @@ body {
 
 .settings-label {
   font-size: 15px;
-  margin-top: 10px;
+  margin-top: 3px;
   color: var(--c-subtext);
 }
 
@@ -212,6 +212,7 @@ body {
   color: var(--c-text);
   font-family: "Golos text", monospace;
   font-size: 14px;
+  margin-bottom: 5px;
 }
 
 .settings-input-toggle {
@@ -298,6 +299,39 @@ body {
   flex-direction: column;
 
   height: 540px; width: 775px;
+}
+
+.dopamine-box {
+  width: 500px;
+  height: 80px;
+}
+
+.db-week {
+  margin-top: 10px;
+  width: 200px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--c-red);
+}
+
+.db-day-container {
+  margin-top: 10px;
+  display: flex;
+  justify-content: space-between;
+
+  width: 200px;
+  height: 20px;
+}
+
+.db-day {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: var(--c-red);
+}
+
+.select-stages-prompt {
+  margin-top: 10px;
 }
 
 .test-options-explanation {
