--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 
   width: 47%; height: 100%;
 }
@@ -277,7 +277,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 4%; width: 100%;
+  height: 3.6%; width: 100%;
+  margin-bottom: 6.4px;
 
   font-size: 10px;
   background-color: var(--c-surface);
@@ -288,6 +289,27 @@ body {
 }
 
 .stage-button:hover {
+  background-color: var(--c-crust) !important;
+}
+
+.stage-41-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3.6%; width: 100%;
+
+  position: absolute;
+  bottom: 0px;
+
+  font-size: 10px;
+  background-color: var(--c-surface);
+  border-radius: 2px;
+  user-select: none;
+
+  transition: background-color 0.2s;
+}
+
+.stage-41-button:hover {
   background-color: var(--c-crust) !important;
 }
 
